[tool.poetry]
name = "sukeb-api"
version = "0.1.0"
description = "sukebのAPI"
authors = ["Kaito Mizukami"]
readme = "README.md"
packages = [{include = "sukeb_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
